syntax = "proto3";
import "Protos/common.proto";
option csharp_namespace = "FrogTailGameServer.Grpc";
package login;

message LoginRequest {
  string device_id = 1;
  string nick_name = 2;
  OsType os_type = 3;
  LoginType login_type = 4;
  string access_token = 5;
}

message VerityLoginRequest {
  OsType os_type = 1;
  LoginType login_type = 2;
  string access_token = 3;
}

message LoginResponse {
  ErrorCode error_code = 1;
  string user_token = 2;
  int64 user_id = 3;
  string guest_token = 4;
}

message VerityLoginResponse {
  ErrorCode error_code = 1;
}

service LoginService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc VerityLogin (VerityLoginRequest) returns (VerityLoginResponse);
}
